welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:9: error: type mismatch;
 found   : Unit
 required: Boolean
  for (b<-0 to nums.length-1){
        ^