welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {
  if (nums.length>=4){
    for (a<-0 to 3){
      if (nums(a)==9){
        return true
      }
    }
  }
  for (b<-0 to nums.length-1){
    if (nums(b)==9){
      return true
    }
  }
}